--- a/app/build.gradle
+++ b/app/build.gradle
@@ -33,4 +33,6 @@ dependencies {
     annotationProcessor 'com.jakewharton:butterknife-compiler:8.5.1'
 
     compile 'com.squareup:otto:1.3.8'
+
+    compile 'com.google.code.gson:gson:2.8.2'
 }
