--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,6 +3,7 @@
     package="com.shadowcoder.courtneyscorner">
 
     <application
+        android:name=".MyApplication"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
@@ -18,6 +19,9 @@
         </activity>
 
         <activity android:name=".activity.crossword.CrosswordActivity"
+            android:theme="@style/AppTheme.FullScreen" />
+
+        <activity android:name=".activity.GeneratorActivity"
             android:theme="@style/AppTheme.FullScreen" />
     </application>
 
