--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,7 +10,10 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".activity.MainActivity">
+        <activity
+            android:name=".activity.MainActivity"
+            android:configChanges="orientation"
+            android:screenOrientation="portrait">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -18,11 +21,16 @@
             </intent-filter>
         </activity>
 
-        <activity android:name=".activity.crossword.CrosswordActivity"
-            android:theme="@style/AppTheme.FullScreen" />
+        <activity
+            android:name=".activity.crossword.CrosswordActivity"
+            android:theme="@style/AppTheme.FullScreen"
+            android:configChanges="orientation"
+            android:screenOrientation="portrait" />
 
         <activity android:name=".activity.GeneratorActivity"
-            android:theme="@style/AppTheme.FullScreen" />
+            android:theme="@style/AppTheme.FullScreen"
+            android:configChanges="orientation"
+            android:screenOrientation="portrait" />
     </application>
 
 </manifest>
